# uni-gzip

./: README.md  pyproject.toml  requirements.txt
src/: __init__.py  exceptions.py  uni_gzip.py
