[build-system]
requires = ["setuptools>=80.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uni-gzip"
version = "1.0.0"
description = "A unified Python library for reading and writing gzip-compressed JSON and text files"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/speech2srt/uni-gzip"
Repository = "https://github.com/speech2srt/uni-gzip"
Issues = "https://github.com/speech2srt/uni-gzip/issues"

[tool.setuptools]
package-dir = {"uni_gzip" = "src"}
packages = ["uni_gzip"]

